objects/ASI_KOR_GMA__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Back_Label_Reason__c</fullName>
        <label>Back Label (Reason)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Erased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Front_Label_Reason__c</fullName>
        <label>Front Label (Reason)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Erased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_How_was_the_estimate_derived_del__c</fullName>
        <label>How was the estimate derived?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>- Under Shelf</fullName>
                </value>
                <value>
                    <fullName>- Inventory Room</fullName>
                </value>
                <value>
                    <fullName>- Told by the Outlet Owner</fullName>
                </value>
                <value>
                    <fullName>- Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lot_No_Reason__c</fullName>
        <label>Lot No. (Reason)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Erased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Other_Description__c</fullName>
        <label>Other Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSP__c</fullName>
        <label>RSP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>GMA</relationshipLabel>
        <relationshipName>GMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>GMA</relationshipLabel>
        <relationshipName>GMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_GMA_Display_Location__c</fullName>
        <label>GMA Display Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Neck_Label__c</fullName>
        <label>Neck Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VisitationPlanDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitation Plan Detail</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan_Detail__c</referenceTo>
        <relationshipLabel>GMA</relationshipLabel>
        <relationshipName>GMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Alcohol__c</fullName>
        <label>Alcohol (%)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_BL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Back_Label__c</fullName>
        <label>Back Label #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Date__c</fullName>
        <defaultValue>IF(CONTAINS($RecordType.DeveloperName,&apos;ASI_CRM_TW_GMA&apos;), TODAY(),NULL)</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Estimated_Q_ty_of_GMA_Sales__c</fullName>
        <label>Estimated Q&apos;ty of GMA Sales</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Estimated_of_GMA_sales__c</fullName>
        <formula>ASI_KOR_Estimated_Q_ty_of_GMA_Sales__c / ASI_KOR_Total_Brand_Sales_Btl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated % of GMA sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Front_Label__c</fullName>
        <label>Front Label #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_GMA_Branch_Name__c</fullName>
        <formula>CreatedBy.ASI_KOR_User_Branch_Name__c</formula>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_GMA_Number__c</fullName>
        <displayFormat>GMA-{00000000}</displayFormat>
        <label>GMA Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_GMA_Report_Area__c</fullName>
        <formula>ASI_KOR_Venue__r.ASI_KOR_Addr_Province__c +&quot;, &quot; + ASI_KOR_Venue__r.ASI_KOR_Addr_City__c</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_GMA_Report_Sub_Brand_Code__c</fullName>
        <formula>ASI_KOR_Sub_Brand__r.ASI_KOR_Sub_Brand_Code__c</formula>
        <label>Sub-Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_GMA_Report_Sub_Brand__c</fullName>
        <formula>ASI_KOR_Sub_Brand__r.Name</formula>
        <label>Sub-Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Importer_Name__c</fullName>
        <label>Importer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Lot_No__c</fullName>
        <label>Lot No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Price_Btl__c</fullName>
        <label>Price/Btl</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity_Btl__c</fullName>
        <label>Quantity (Btl)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Route_Brand_Sales_Btl__c</fullName>
        <label>Route Source Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RS01  Duty Free</fullName>
                </value>
                <value>
                    <fullName>RS02  Jeju Duty Free</fullName>
                </value>
                <value>
                    <fullName>RS03  Kukje Duty Free</fullName>
                </value>
                <value>
                    <fullName>RS04  Open Market</fullName>
                </value>
                <value>
                    <fullName>RS05  Parallel</fullName>
                </value>
                <value>
                    <fullName>RS06  Undefined</fullName>
                </value>
                <value>
                    <fullName>RS07  Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Customer_Code__c</fullName>
        <formula>ASI_KOR_Venue__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Customer_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Sub_Brand_Code__c</fullName>
        <formula>ASI_KOR_Sub_Brand__r.ASI_KOR_Sub_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Sub_Brand_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Size_cl__c</fullName>
        <label>Size (cl)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>GMAS - Sub-Brand</relationshipLabel>
        <relationshipName>GMAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Brand_Sales_Btl__c</fullName>
        <label>Total Brand Sales (Btl)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Type__c</fullName>
        <formula>ASI_KOR_Venue__r.ASI_KOR_Venue_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GMA - Venue</relationshipLabel>
        <relationshipName>GMAS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Address__c</fullName>
        <formula>ASI_CRM_VN_Customer__r.ASI_CRM_CN_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Bottle_Code__c</fullName>
        <label>Bottle Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Full_Case_Code__c</fullName>
        <label>Full Case Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Other_Markings__c</fullName>
        <label>Other Markings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Outlet_type__c</fullName>
        <formula>TEXT( ASI_CRM_VN_Customer__r.ASI_CRM_VN_OutletType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_VN_GMA_Town__c</fullName>
        <formula>TEXT(ASI_CRM_VN_Customer__r.ASI_CRM_VN_Province__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Town</label>
        <type>Text</type>
    </fields>
    <label>GMA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_KR_GMA</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>All-KR GMA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GMA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GMA</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_GMA</fullName>
        <active>true</active>
        <description>for SG Demo</description>
        <label>SG GMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_GMA</fullName>
        <active>true</active>
        <label>TW GMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_GMA</fullName>
        <active>true</active>
        <label>VN GMA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_BackLabelReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( ASI_CRM_Back_Label_Reason__c )=&apos;&apos;, 
ISBLANK( ASI_KOR_Back_Label__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Back_Label_Reason__c</errorDisplayField>
        <errorMessage>Please enter Reason if Back Label is empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_FrontLabelReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(  ASI_CRM_Front_Label_Reason__c  )=&apos;&apos;, 
ISBLANK( ASI_KOR_Front_Label__c ))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Front_Label_Reason__c</errorDisplayField>
        <errorMessage>Please enter Reason if Front Label is empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_LotNoReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( ASI_CRM_Lot_No_Reason__c )=&apos;&apos;,
 ISBLANK(ASI_KOR_Lot_No__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Lot_No_Reason__c</errorDisplayField>
        <errorMessage>Please enter the Reason if Lot No. is empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_Specify_Picklist_Option_Others</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(ASI_CRM_How_was_the_estimate_derived_del__c ) = &quot;- Others&quot;,
ISBLANK(ASI_CRM_Other_Description__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Other_Description__c</errorDisplayField>
        <errorMessage>Please specify your option.</errorMessage>
    </validationRules>
</CustomObject>